data/derived/sp14/progs/unify/prog3680.ml.out
Characters 8-14:
  let r = [2; 3]
          ^^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
